--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,25 @@
 [project]
-name = "amoc_collapse"
-version = "0.0.0"
+authors = [{name = "Joran R. Angevaare"}]
 dependencies = [
-    "immutabledict",
-    "intake-esm",
-    "matplotlib",
-    "numba",
-    "numpy",
-    "pandas",
-    "tqdm",
-    "treelib",
-    "xarray",
-    "statsmodels",
-    "seawater",
+  "immutabledict",
+  "intake-esm",
+  "matplotlib",
+  "numba",
+  "numpy",
+  "optim_esm_tools>=2.1.0",
+  "pandas",
+  "tqdm",
+  "treelib",
+  "xarray",
+  "statsmodels",
+  "seawater",
 ]
+license = {text = "MIT"}
+maintainers = [{name = "Joran R. Angevaare"}]
+name = "amoc_collapse_scripts"
 readme = "README.md"
 requires-python = ">=3.8"
-license = { text = "MIT" }
-authors = [{ name = "Joran R. Angevaare" }]
-maintainers = [{ name = "Joran R. Angevaare" }]
-
-
+version = "0.0.0"
 
 [tool.setuptools.package-data]
 optim_esm_tools = ['scripts/*', '*.ini*', 'py.typed']
@@ -29,25 +28,23 @@ optim_esm_tools = ['scripts/*', '*.ini*', 'py.typed']
 where = [".", "scripts"]
 
 [project.urls]
-homepage = 'https://github.com/jmecki/AMOCcollapse'
 documentation = 'https://github.com/jmecki/AMOCcollapse/README.md'
+homepage = 'https://github.com/jmecki/AMOCcollapse'
 repository = 'https://github.com/jmecki/AMOCcollapse'
 
-
 [build-system]
-requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
-
+requires = ["setuptools"]
 
 [tool.black]
-target-version = ['py38']
 skip-string-normalization = true
+target-version = ['py38']
 
 [tool.coverage.report]
 exclude_lines = [
-    "if __name__ == .__main__.:",
-    "pragma: no cover",
-    "ignore_errors = True",
+  "if __name__ == .__main__.:",
+  "pragma: no cover",
+  "ignore_errors = True",
 ]
 
 [tool.flake8]
